import pygame

class SaveLoadManager():
    def __init__(self):
        print('a')

    def save(self, data):
        print('save')

    def load(self):
        print('load')

def test():
    print('test')

if __name__ == '__main__':
    test()